# aurelius-financial-reasoning-infra

./: .gitignore  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile.rust  FINAL_SUMMARY.md  HIPCORTEX_IMPLEMENTATION.md  IMPLEMENTATION_PHASE1.md  IMPLEMENTATION_SUMMARY.md  LLM_STRATEGY_GENERATION.md  Makefile  PHASE2_SUMMARY.md  PHASE3_REST_API_COMPLETE.md  PHASE4_DATABASE_COMPLETE.md  PHASE5_DASHBOARD_COMPLETE.md  PHASE7_COMPLETION_REPORT.md  PHASE7_FINAL_SUMMARY.md  PHASE9_COMPLETION.md  PHASE9_STATUS_REPORT.md  PHASE9_TEST_RESULTS.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TASK_GENERATOR_IMPLEMENTATION.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci-cd.yml  docker.yml
api/: .dockerignore  .env  .env.example  .env.production.example  Dockerfile  README.md  __init__.py  aurelius.db  config.py  example_client.py  init_db.py  main.py  requirements.txt  run_live_e2e_acceptance.py  test_auth_policy_consistency.py  test_docs_consistency.py  test_integration.py  test_load.py  test_parity_controls.py  test_product_experience_regressions.py  test_product_surface_contract.py  test_promotion_readiness.py  test_startup_operational_reliability.py  validate_truth_path_e2e.py
api/alembic/: __init__.py  alembic.ini  env.py  script.py.mako
api/alembic/versions/: 001_initial.py
api/database/: __init__.py  crud.py  models.py  optimization.py  session.py  user_crud.py
api/primitives/v1/: __init__.py  gates.py  openapi.py  readiness.py
api/routers/: __init__.py  advanced.py  auth.py  backtests.py  gates.py  orchestrator.py  reflexion.py  strategies.py  validation.py  websocket.py  websocket_router.py
api/schemas/: backtest.py  gate.py  strategy.py  validation.py
api/security/: dependencies.py
api/services/: engine_backtest.py  gate_verification.py  governance.py  parity_config.py  promotion_readiness.py  release_gates.py
api/tests/primitives/: test_determinism.py  test_determinism_integration.py
api/websocket/: contract.py  manager.py
aws/: ecs-task-definition.json
crates/aureus/: README.md
crates/broker_sim/: Cargo.toml  SPRINT1_STATUS.md
crates/broker_sim/src/: lib.rs
crates/cli/: Cargo.toml  SPRINT1_STATUS.md
crates/cli/src/: backtest_cmd.rs  main.rs  spec.rs  strategies.rs
crates/cost/: Cargo.toml  SPRINT1_STATUS.md
crates/cost/src/: lib.rs
crates/crv_verifier/: Cargo.toml  SPRINT1_STATUS.md
crates/crv_verifier/src/: lib.rs  types.rs  verifier.rs
crates/crv_verifier/tests/: flawed_strategies.rs  golden_tests.rs
crates/crv_verifier/tests/golden_files/: excessive_drawdown.json  passing_backtest.json
crates/engine/: Cargo.toml
crates/engine/src/: backtest.rs  data_feed.rs  lib.rs  output.rs  portfolio.rs
crates/engine/tests/: determinism.rs
crates/hipcortex/: Cargo.toml  README.md  SPRINT1_STATUS.md
crates/hipcortex/src/: artifact.rs  audit.rs  index.rs  lib.rs  repository.rs  storage.rs
crates/hipcortex/tests/: replay_tests.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs  market_data.rs  traits.rs  types.rs
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/scripts/: check_dashboard_dependencies.py  validate_api_contract.py
dashboard/src/: App.jsx  main.jsx
dashboard/src/components/: BacktestModal.jsx  EmptyState.jsx  ErrorMessage.jsx  Header.jsx  LoadingSpinner.jsx  ProtectedRoute.jsx  Sidebar.jsx  StrategyGenerationModal.jsx
dashboard/src/context/: AuthContext.jsx  WebSocketContext.jsx
dashboard/src/hooks/: useRealtime.js
dashboard/src/pages/: AdvancedFeatures.jsx  Backtests.jsx  Dashboard.jsx  Gates.jsx  Orchestrator.jsx  Reflexion.jsx  Strategies.jsx  StrategyDetail.jsx
dashboard/src/pages/auth/: Login.jsx  Register.jsx
dashboard/src/services/: api.js  websocketContract.js
data/: README.md
docs/: ACCEPTANCE_EVIDENCE_CLOSE_PRODUCT_EXPERIENCE_GAPS.md  API_BACKWARD_COMPATIBILITY_POLICY.md  MARKET_DATA_BUS_ROLLOUT.md  README.md  RELEASE_MATURITY_GUIDE.md  ROLLBACK_AND_SAFETY_PLAYBOOK.md  WEBSOCKET_CONTRACT.md
docs/primitives/: determinism.md
examples/: data.parquet  fetch_alpaca_bars.py  generate_data.py  spec.json  spec_alpaca_canonical.json
k8s/: deployment.yml
openspec/changes/add-promotion-readiness-scorecard/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-15-close-all-implementation-gaps/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-15-unified-market-data-bus/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-16-close-product-experience-gaps/: design.md  proposal.md  tasks.md
openspec/changes/refactor-to-infrastructure/: tasks.md
openspec/specs/acceptance-evidence-quality/: spec.md
openspec/specs/api-contract-parity/: spec.md
openspec/specs/canonical-market-events/: spec.md
openspec/specs/dataset-provenance/: spec.md
openspec/specs/decision-lineage-governance/: spec.md
openspec/specs/documentation-reality-alignment/: spec.md
openspec/specs/market-data-adapters/: spec.md
openspec/specs/product-surface-completeness/: spec.md
openspec/specs/promotion-readiness-scorecard/: spec.md
openspec/specs/release-maturity-gates/: spec.md
openspec/specs/runtime-truth-path/: spec.md
openspec/specs/websocket-contract-consistency/: spec.md
python/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS.md  pyproject.toml
python/aureus/: llm_strategy_generator.py  orchestrator.py  walk_forward.py
python/aureus/gates/: product_gate.py
python/aureus/tasks/: README.md  __init__.py  benchmark.py  storage.py  synthetic_generator.py  task_generator.py
python/aureus/tools/: rust_wrapper.py  schemas.py
python/examples/: integration_test_example.py  llm_strategy_demo.py  run_example.sh  task_benchmark_demo.py
python/tests/: test_advanced_strategies.py  test_benchmark.py  test_llm_strategy_generator.py  test_storage.py  test_strategy_generation.py  test_synthetic_generator.py  test_task_generator.py  test_walk_forward.py
specs/: README.md
(+35 files in other folders)
