[workspace]
members = [
    "crates/schema",
    "crates/cost",
    "crates/broker_sim",
    "crates/engine",
    "crates/cli", "crates/crv_verifier",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AURELIUS Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
# Internal dependencies
schema = { path = "crates/schema" }
cost = { path = "crates/cost" }
broker_sim = { path = "crates/broker_sim" }
engine = { path = "crates/engine" }
crv_verifier = { path = "crates/crv_verifier" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
csv = "1.3"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4.5", features = ["derive"] }
polars = { version = "0.46", features = ["lazy", "parquet"] }
sha2 = "0.10"
