[project]
name = "aureus"
version = "0.1.0"
description = "Python orchestrator for AURELIUS Quant Reasoning Model"
authors = [{name = "AURELIUS Contributors"}]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
aureus = "aureus.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
