[package]
name = "hipcortex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hipcortex"
path = "src/bin/main.rs"

[dependencies]
schema = { workspace = true }
crv_verifier = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.15"
